--- a/index.html
+++ b/index.html
@@ -2,11 +2,160 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Седона</title>
   </head>
+
   <body>
+    <header class="page_header">
+      <a class="navigation_logo" href="https://htmlacademy.ru/">
+        <img class="logo" src="" alt="Логотип компании Седона">
+      </a>
+<nav class="navigation">
+<ul class="navigation_list">
+  <li class="navigation_item">
+    <a class="navigation_link" href="main.html">Главная</a>
+  </li>
+  <li class="navigation_item">
+    <a class="navigation_link" href="about.htmn">О Седоне</a>
+    </li>
+  <li class="navigation_item">
+    <a class="navigation_link" href="catalog.html">Гостиницы</a>
+    </li>
+</ul>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+<ul class="navigation_list navigation_right">
+  <li class="navigation_item">
+    <a class="navigation_link" href="#">
+    <span class="visually_hidden">
+      Поиск
+    </span>
+  </a>
+  </li>
+  <li class="navigation_item">
+    <a class="navigation_link" href="#">
+    <span class="visually_hidden">
+      Отзывы
+    </span>
+  </a>
+  </li>
+  <li class="navigation_item">
+    <a class="navigation_link" href="#">
+      Хочу сюда
+  </a>
+  </li>
+</ul>
+</nav>
+    </header>
+    <main class="main_index">
+<h1 class="visually_hidden">Седона</h1>
+<img class="welcome" src="" alt="Приветствие">
+<img class="gargeous" src="" alt="Великолепное">
+<img class="sedona" src="" alt="Причина">
 
-  </body>
+<section class="about">
+  <h2>Седона — небольшой городок в Аризоне,
+    заслуживающий большего!</h2>
+    <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+</section>
+
+<section class="advantages">
+<h2 class="visually_hidden">Преимущества</h2>
+<ul class="advantages_list">
+<li class="advantages_item">
+  <h3 class="advantages_title">Настоящий городок</h3>
+  <p class="advantages_description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+</li>
+<li class="advantages_item">
+  <h3 class="advantages_title visually_hidden">Центральная площадь</h3>
+  <img class="advantages_photo" src="" alt="Центральная площадь города">
+</li>
+<li class="advantages_item">
+  <h3 class="advantages_title">Небольшая площадь</h3>
+  <p class="advantages_description">Все достопримечательности находятся очень близко</p>
+</li>
+<li class="advantages_item">
+  <h3 class="advantages_title">Красивая дорога</h3>
+  <p class="advantages_description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+</li>
+<li class="advantages_item">
+  <h3 class="advantages_title">Мало туристов</h3>
+  <p class="advantages_description">Большинство едет в Гранд Каньон и толпится там</p>
+</li>
+<li class="advantages_item">
+  <h3 class="advantages_title visually_hidden">Каньон</h3>
+  <img class="advantages_photo" src="" alt="Каньон Седоны">
+</li>
+<li class="advantages_item">
+  <h3 class="advantages_title">Там есть мост дьявола</h3>
+  <p class="advantages_description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+</li>
+</ul>
+</section>
+
+
+<section class="recomendacion">
+<ul class="recomendacion_list">
+<li class="recomendacion_item">
+  <h3 class="recomendacion_title">Жильё</h3>
+  <p class="recomendacion_description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+</li>
+<li class="recomendacion_item">
+  <h3 class="recomendacion_title">Еда</h3>
+  <p class="recomendacion_description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+</li>
+<li class="recomendacion_item">
+  <h3 class="recomendacion_title">Сувениры</h3>
+  <p class="recomendacion_description">Не только китайского, но и настоящего местного производства!</p>
+</li>
+</ul>
+</section>
+
+<section class="booking">
+  <h3 class="booking_title">Заинтересовались?</h3>
+  <p class="booking_description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+  <button class="booking_button">
+    ПОИСК ГОСТИНИЦЫ В СЕДОНЕ
+  </button>
+</section>
+
+<section class="subscribe">
+  <h3 class="subscribe_title">Подпишитесь на рассылку</h3>
+  <p class="subscribe_description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+  <input type="text">
+  <form class="subscribe_form" action="https://echo.htmlacademy.ru/" method="post">
+    <button class="subscribe_button">Подписаться</button>
+  </form>
+</section>
+    </main>
+
+    <footer class="page_footer">
+      <section class="footer_social">
+        <h2 class="footer_title visually_hidden">Cоциальные сети</h2>
+        <ul class="footer_social_list">
+          <li class="footer_social_item">
+            <a class="button" href="https://vc.com/htmlacademy">
+              <span class="visually_hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="footer_social_item">
+            <a class="button" href="https://t.me/htmlacademy">
+              <span class="visually_hidden">Телеграмм</span>
+            </a>
+          </li>
+          <li class="footer_social_item">
+            <a class="button" href="https://www.youtoobe.com/user/htmlacademy">
+              <span class="visually_hidden">Ютуб</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="contacts">
+        <h2>+7 (812) 812-12-12</h2>
+        <img class="logo_html" src="" alt="Логотип компании htmlacademy">
+        <a class="html_academy_link" href="https://htmlacademy.ru/"></a>
+      </section>
+
+    </footer>
+   </body>
 </html>
