--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
   </a> </div>
 		</nav>
 	</header>
+
 	<main class="main_index">
-		<h1 class="visually_hidden">Седона</h1> <img class="main_photo" src="Images/Hero/hero.jpg" width="1200" height="485" alt="Вид на каньоны Седоны"> <img class="main_welcome" src="Images/Hero/welcome.svg" width="188" height="45" alt="Добро пожаловать"> <img class="main_welcome_to" src="Images/Hero/welcome_to.svg" width="256" height="29" alt="Великолепная"> <img class="sedona" src="Images/Hero/sedona.svg" width="457" height="213" alt="Седона">
+		<h1 class="visually_hidden">Седона</h1>
 		<section class="hero">
 			<h2>Седона — небольшой городок в Аризоне,
     заслуживающий большего!</h2>
@@ -56,8 +57,6 @@
 				<h3 class="advantages_title">Там есть мост дьявола</h3>
 				<p class="advantages_description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
 			</div>
-		</section>
-		<section class="recomendacion">
 			<ul class="recomendacion_list">
 				<li class="recomendacion_item"> <img class="recomendacion_icon" src="Images/Advantages/house.svg" width="75" height="72" alt="Логотип жилья">
 					<h3 class="recomendacion_title">Жильё</h3>
