--- a/catalog.html
+++ b/catalog.html
@@ -4,29 +4,30 @@
 <head>
 	<meta charset="utf-8">
 	<title>Седона</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
 	<header class="page_header" data-test="header">
-		<a href="index.html"> </a>
+	  <a href="index.html" class="navigation_link" href="#"> <img class="logo" src="Images/Header/logo.svg" width="140" height="70" alt="Уютный городок Седона"> </a>
 		<nav class="navigation">
 			<ul class="navigation_list">
 				<li class="navigation_item"> <a class="navigation_link" href="index.html">Главная</a> </li>
 				<li class="navigation_item"> <a class="navigation_link" href="about.html">О Седоне</a> </li>
-				<li class="navigation_item"> <a class="navigation_link_current" href="hotel.html">Гостиницы</a> </li>
+				<li class="navigation_item"> <a class="navigation_link" href="hotel.html">Гостиницы</a> </li>
 			</ul>
 			<ul class="navigation_list navigation_right">
 				<li class="navigation_item">
 					<a class="navigation_link" href="#"> <span class="visually_hidden">
       Поиск
-    </span> </a>
+    </span><img class="header_logo" src="Images/Header/search.svg" width="44" height="64" alt="Поиск">  </a>
 				</li>
 				<li class="navigation_item">
 					<a class="navigation_link" href="#"> <span class="visually_hidden">
-      Отзывы
-    </span> </a>
+      Избранное
+    </span> <img class="header_logo" src="Images/Header/like.svg" width="44" height="64" alt="Избранное"> </a>
 				</li>
-				<li class="navigation_item"> <a class="navigation_link" href="#">
+				<li class="navigation_item"> <a class="navigation_link_button" href="#">
       Хочу сюда
   </a> </li>
 			</ul>
@@ -105,50 +106,50 @@
 
 			<section class="product_list">
 				<section class="product_card"> <img class="product_card_image" src="Images/Hotel/hotel_1.jpg" alt="Amara">
-					<a class="product_card_link" href="product.html">
-						<h3 class="product_cards_title">Amara Resort & Spa</h3> </a> <b class="product_card_type">Гостиница</b> <b class="product_card_price">От 4000 &#8381;</b> <a class="product_card_about" href="card.html">
+					<a class="navigation_link" href="product.html">
+						<h3 class="product_cards_title">Amara Resort & Spa</h3> </a> <b class="product_card_type">Гостиница</b> <b class="product_card_price">От 4000 &#8381;</b> <a class="navigation_link_button" href="card.html">
                 Подробнее
               </a>
-					<button class="card_favourites"> В избранное </button>
+					<button class="subscribe_button"> В избранное </button>
 					<p class="product_card_stars visually_hidden">4 звезды</p>
 					<p class="product_card_rating">Рейтинг 8,5</p>
 				</section>
 				<section class="product_card"> <img class="product_card_image" src="Images/Hotel/hotel_2.jpg" alt="Villas">
-					<a class="product_card_link" href="product.html">
-						<h3 class="product_cards_title">Villas at Poco Diablo</h3> </a> <b class="product_card_type">Гостиница</b> <b class="product_card_price">От 5000 &#8381;</b> <a class="product_card_about" href="card.html">
+					<a class="navigation_link" href="product.html">
+						<h3 class="product_cards_title">Villas at Poco Diablo</h3> </a> <b class="product_card_type">Гостиница</b> <b class="product_card_price">От 5000 &#8381;</b> <a class="navigation_link_button" href="card.html">
                   Подробнее
                 </a>
-					<button class="card_favourites"> В избранное </button>
+					<button class="subscribe_button"> В избранное </button>
 					<p class="product_card_stars visually_hidden">4 звезды</p>
 					<p class="product_card_rating">Рейтинг 8,5</p>
 				</section>
 				<section class="product_card"> <img class="product_card_image" src="Images/Hotel/hotel_3.jpg" alt="Desert">
-					<a class="product_card_link" href="product.html">
-						<h3 class="product_cards_title">Desert Quail Inn</h3> </a> <b class="product_card_type">Гостиница</b> <b class="product_card_price">От 2500 &#8381;</b> <a class="product_card_about" href="card.html">
+					<a class="navigation_link" href="product.html">
+						<h3 class="product_cards_title">Desert Quail Inn</h3> </a> <b class="product_card_type">Гостиница</b> <b class="product_card_price">От 2500 &#8381;</b> <a class="navigation_link_button" href="card.html">
                     Подробнее
                   </a>
-					<button class="card_favourites"> В избранное </button>
+					<button class="subscribe_button"> В избранное </button>
 					<p class="product_card_stars visually_hidden">3 звезды</p>
 					<p class="product_card_rating">Рейтинг 8,5</p>
 				</section>
 				<section class="product_card"> <img class="product_card_image" src="Images/Hotel/hotel_4.jpg" alt="Desert">
-					<a class="product_card_link" href="product.html">
-						<h3 class="product_cards_title">GreenTree Inn</h3> </a> <b class="product_card_type">Гостиница</b> <b class="product_card_price">От 1500 &#8381;</b> <a class="product_card_about" href="card.html">
+					<a class="navigation_link" href="product.html">
+						<h3 class="product_cards_title">GreenTree Inn</h3> </a> <b class="product_card_type">Гостиница</b> <b class="product_card_price">От 1500 &#8381;</b> <a class="navigation_link_button" href="card.html">
                       Подробнее
                     </a>
-					<button class="card_favourites"> В избранное </button>
+					<button class="subscribe_button"> В избранное </button>
 					<p class="product_card_stars visually_hidden">2 звезды</p>
 					<p class="product_card_rating">Рейтинг 8,5</p>
 				</section>
 			</section>
 
 			<div class="pagination">
-				<a class="pagination_link pagination_current">1</a> </li>
-				<a class="pagination_link">2</a> </li>
-				<a class="pagination_link">3</a> </li>
-				<a class="pagination_link">4</a> </li>
-				<a class="pagination_link">...</a> </li>
-				<a class="pagination_link">10</a> </li>
+				<a class="navigation_link_pagination_current">1</a>
+				<a class="subscribe_button">2</a>
+				<a class="subscribe_button">3</a>
+				<a class="subscribe_button">4</a>
+				<a class="page_header">...</a>
+				<a class="subscribe_button">10</a>
       </div>
 		</section>
 
@@ -158,18 +159,16 @@
 				<button class="subscribe_button">Подписаться</button>
         <input type="text">
 			</form>
-		</section>
 	</main>
 
 	<footer class="page_footer" data-test="footer">
 		<div class="footer_social">
-			<a class="button" href="https://vc.com/htmlacademy"> <span class="visually_hidden">Вконтакте</span> <img class="social_logo" src="Images/Footer/vkontakte.svg" width="24" height="14" alt="Вконтакте"> </a>
-			<a class="button" href="https://t.me/htmlacademy"> <span class="visually_hidden">Телеграмм</span> <img class="social_logo" src="Images/Footer/telegram.svg" width="24" height="14" alt="Телеграм"> </a>
-			<a class="button" href="https://www.youtoobe.com/user/htmlacademy"> <span class="visually_hidden">Ютуб</span> <img class="social_logo" src="Images/Footer/youtube.svg" width="24" height="14" alt="Ютуб"> </a>
-			</a>
+			<a class="navigation_link" href="https://vc.com/htmlacademy"> <span class="visually_hidden">Вконтакте</span> <img class="social_logo" src="Images/Footer/vkontakte.svg" width="24" height="14" alt="Вконтакте"> </a>
+			<a class="navigation_link" href="https://t.me/htmlacademy"> <span class="visually_hidden">Телеграмм</span> <img class="social_logo" src="Images/Footer/telegram.svg" width="24" height="14" alt="Телеграм"> </a>
+			<a class="navigation_link" href="https://www.youtoobe.com/user/htmlacademy"> <span class="visually_hidden">Ютуб</span> <img class="social_logo" src="Images/Footer/youtube.svg" width="24" height="14" alt="Ютуб"> </a>
 		</div>
 		<section class="contacts"> <a href="tel:78128121212">+7(812)812-12-12</a> <img class="logo_html" src="Images/Footer/html_academy.svg" width="114" height="33" alt="Логотип компании htmlacademy">
-			<a class="html_academy_link" href="https://htmlacademy.ru/"></a>
+			<a class="navigation_link" href="https://htmlacademy.ru/"></a>
 		</section>
 	</footer>
 </body>
