Базовая стилизация всех страниц

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <p class="advantages_description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
       </div>
       <ul class="advantages_list">
-        <li class="advantages_item_light_blue">
+        <li class="advantages_item_light_blue house">
           <h3 class="advantages_title">Жильё</h3>
           <p class="advantages_description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
