Добавила в базовую стилизацию псевдоэлементы

--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
       </div>
       <ul class="advantages_list">
         <li class="advantages_item_light_blue house">
-          <h3 class="advantages_title">Жильё</h3>
+          <h3 class="advantages_title house">Жильё</h3>
           <p class="advantages_description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
         <li class="advantages_item">
-          <h3 class="advantages_title">Еда</h3>
+          <h3 class="advantages_title food">Еда</h3>
           <p class="advantages_description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
         </li>
         <li class="advantages_item_light_blue">
-          <h3 class="advantages_title">Сувениры</h3>
+          <h3 class="advantages_title gifts">Сувениры</h3>
           <p class="advantages_description">Не только китайского, но и настоящего местного производства!</p>
         </li>
       </ul>
