--- a/catalog.html
+++ b/catalog.html
@@ -82,16 +82,13 @@
             </div>
           </div>
 
-          <div class="right_menu">
-            <div class="price">
-              <h3 class="price_title">Стоимость, &#8381; </h3>
-              <!--Здесь будет фильтр с ползунком и кнопки-->
-            </div>
-            <div class="price_button">
-              <button class="button_apply">Применить</button>
-              <button class="button_reset">Сбросить</button>
-            </div>
+          <!-- Здесь будет ползунок
+
+          <div class="price_button">
+            <button class="button_apply">Применить</button>
+            <button class="button_reset">Сбросить</button>
           </div>
+        -->
         </section>
       </div>
 
@@ -199,12 +196,13 @@
       <form class="subscribe_form_catalog" action="https://echo.htmlacademy.ru/" method="post">
         <div class="subscribe">
           <h3 class="subscribe_title_catalog">Подпишитесь на рассылку</h3>
-          <p class="subscribe_description_catalog">Только полезная информация и никакого спама, честное бойскаутское!</p>
-            <div class="input_button_catalog">
-              <input class="input_style" type="text" placeholder="Ваш e-mail">
+          <p class="subscribe_description_catalog">Только полезная информация и никакого спама, честное бойскаутское!
+          </p>
+          <div class="input_button_catalog">
+            <input class="input_style" type="text" placeholder="Ваш e-mail">
             <button class="subscribe_button">Подписаться</button>
+          </div>
         </div>
-      </div>
       </form>
     </main>
 
