--- a/catalog.html
+++ b/catalog.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <div class="container">
     <header class="page_header" data-test="header">
       <a class="navigation_logo" href="index.html"> <img class="logo" src="Images/Header/logo.svg" width="138"
           height="64" alt="Уютный городок Седона"> </a>
@@ -24,7 +25,7 @@
               </span> <img class="header_logo" src="Images/Header/search.svg" width="44" height="64" alt="Поиск"> </a>
             <a class="navigation_link" href="#"> <span class="visually_hidden">
                 Избранное
-              </span> <img class="header_logo" src="Images/Header/likie_green.svg" width="44" height="64"
+              </span> <img class="header_logo" src="Images/Header/like_green.svg" width="44" height="64"
                 alt="Избранное"> </a>
           </div>
           <a class="navigation_link_button" href="#">Хочу сюда!</a>
@@ -222,6 +223,7 @@
         <a class="footer navigation_link" href="https://htmlacademy.ru/"></a>
       </div>
     </footer>
+  </div>
   </body>
 
 </html>
