--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
                 src="Images/Footer/youtube.svg" width="24" height="14" alt="Ютуб"> </a>
           </div>
           <a class="contacts_tel" href="tel:78128121212">+7(812)812-12-12</a>
-          <img class="logo_html" src="Images/Footer/html_academy.svg" width="115" height="33"
-            alt="Логотип компании htmlacademy">
-          <a class="footer navigation_link" href="https://htmlacademy.ru/"></a>
+          <a class="footer_navigation_link" href="https://htmlacademy.ru/"><img class="logo_html" src="Images/Footer/html_academy.svg" width="115" height="33"
+            alt="Логотип компании htmlacademy"></a>
         </div>
       </footer>
     </div>
