Правки с Pixel Perfect

--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
           </div>
           <ul class="advantages_list">
             <li class="advantages_item_light_blue">
-              <h3 class="advantages_title">Небольшая площадь</h3>
+              <h3 class="advantages_title_light_blue">Небольшая площадь</h3>
               <p class="advantages_description">Все достопримечательности находятся очень близко</p>
             </li>
             <li class="advantages_item_nolight_blue">
-              <h3 class="advantages_title">Красивая дорога</h3>
+              <h3 class="advantages_title_light_blue">Красивая дорога</h3>
               <p class="advantages_description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="advantages_item_light_blue">
-              <h3 class="advantages_title">Мало туристов</h3>
+              <h3 class="advantages_title_light_blue">Мало туристов</h3>
               <p class="advantages_description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
           </ul>
           <div class="advantages_item_blue"> <img class="advantages_photo" src="Images/Advantages/canyon.jpg"
               width="800" height="384" alt="Каньон Седоны">
             <div class="advantages_container">
-              <h3 class="advantages_title">Там есть мост дьявола</h3>
+              <h3 class="advantages_title">Там есть <br>мост дьявола</h3>
               <p class="advantages_description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
           </div>
