--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
             <li class="advantages_item_light_blue house">
               <div class="advantages_container">
                 <h3 class="services_title_house">Жильё</h3>
-                <p class="services_description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                <p class="services_description">Рекомендуем пожить <br>в настоящем мотеле, <br>всё как в кино!</p>
               </div>
             </li>
             <li class="advantages_item">
               <h3 class="services_title_food">Еда</h3>
-              <p class="services_description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              <p class="services_description">Всегда заказывайте <br>топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="advantages_item_light_blue">
               <h3 class="services_title_gifts">Сувениры</h3>
-              <p class="services_description">Не только китайского, но и настоящего местного производства!</p>
+              <p class="services_description">Не только китайского,<br> но и настоящего местного производства!</p>
             </li>
           </ul>
         </section>
