--- a/catalog.html
+++ b/catalog.html
@@ -113,6 +113,7 @@
             <option value="expensive">Сначала дорогие</option>
             <option value="popular">Сначала популярные</option>
           </select>
+          <div class="visually_cards">
           <a href="#" class="button_activ"> <span class="visually_hidden">
               Показать карточки
             </span> <img class="filter_card" src="Images/Catalog/filter_cards.svg" width="16" height="14"
@@ -125,6 +126,7 @@
               Показать список
             </span> <img class="filter_text" src="Images/Catalog/filter_text.svg" width="16" height="14"
               alt="Показать список"> </a>
+            </div>
         </section>
 
         <section class="product_list">
@@ -141,7 +143,7 @@
               <button class="card_like_button">В избранное </button>
             </div>
             <p class="product_card_stars visually_hidden">4 звезды</p>
-            <p class="card_rating">Рейтинг 8,5</p>
+            <p class="card_rating">Рейтинг: 8,5</p>
           </section>
 
           <section class="product_card"> <img class="product_card_image" src="Images/Hotel/hotel_2.jpg" alt="Villas">
@@ -157,7 +159,7 @@
               <button class="card_looklike_button"> В избранном </button>
             </div>
             <p class="product_card_stars visually_hidden">4 звезды</p>
-            <button class="card_rating">Рейтинг 8,5</button>
+            <p class="card_rating">Рейтинг: 9,2</p>
           </section>
 
           <section class="product_card"> <img class="product_card_image" src="Images/Hotel/hotel_3.jpg" alt="Desert">
@@ -173,7 +175,7 @@
               <button class="card_like_button"> В избранное </button>
             </div>
             <p class="product_card_stars visually_hidden">3 звезды</p>
-            <p class="card_rating_three">Рейтинг 8,5</p>
+            <p class="card_rating_three">Рейтинг: 6,9</p>
           </section>
 
           <section class="product_card"> <img class="product_card_image" src="Images/Hotel/hotel_4.jpg" alt="Desert">
@@ -189,7 +191,7 @@
               <button class="card_like_button"> В избранное </button>
             </div>
             <p class="product_card_stars visually_hidden">2 звезды</p>
-            <p class="card_rating_two">Рейтинг 8,5</p>
+            <p class="card_rating_two">Рейтинг: 5,0</p>
           </section>
         </section>
 
@@ -226,9 +228,9 @@
             <a class="footer_link" href="https://www.youtoobe.com/user/htmlacademy"><img class="social_logo"
                 src="Images/Footer/youtube.svg" width="22" height="16" alt="Ютуб"> </a>
           </div>
-          <a class="contacts_tel" href="tel:78128121212">+7(812)812-12-12</a>
-          <a class="footer_navigation_link" href="https://htmlacademy.ru/"><img class="logo_html"
-              src="Images/Footer/html_academy.svg" width="115" height="33" alt="Логотип компании htmlacademy"></a>
+          <a class="contacts_tel" href="tel:78128121212">+7 (812) 812-12-12</a>
+          <a class="footer_navigation_link" href="https://htmlacademy.ru/"><img class="logo_html" src="Images/Footer/html_academy.svg" width="115" height="33"
+            alt="Логотип компании htmlacademy"></a>
         </div>
       </footer>
     </div>
