Защита личного проекта

--- a/catalog.html
+++ b/catalog.html
@@ -61,7 +61,7 @@
                 <p class="catalog_filter_title">Инфраструктура:</p>
                 <ul class="catalog_filter_list">
                   <li class="catalog_filter_item">
-                    <input class="control_input" type="checkbox" name="swimingpool" checked id="chek_1" tabindex="1">
+                    <input class="control_input" type="checkbox" name="swimingpool" checked id="check_1" tabindex="1">
                     <label class="control" for="check_1">Бассейн</label>
                   </li>
                   <li class="catalog_filter_item">
