--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <section class="hero">
           <h2 class="hero_title">Седона — небольшой городок в Аризоне,
-            заслуживающий большего!></h2>
+            заслуживающий большего!</h2>
           <p class="hero_description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         </section>
         <section class="advantages">
