--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <span class="date_invalid">Мы не можем отправить вас в прошлое.</span>
           <div class="bookking_date">
             <label class="choice_date" for="date_off">Дата Выезда:</label>
-            <input class="choice_input_off" id="date" type="text" tabindex="1" name="date" value="1 сентября 2023">
+            <input class="choice_input_off" id="date_off" type="text" tabindex="1" name="date" value="1 сентября 2023">
           </div>
           <svg class="calendar_off" width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M5.75 10C6.05 10 6.25 9.8 6.25 9.5C6.25 9.2 6.05 9 5.75 9C5.45 9 5.25 9.2 5.25 9.5C5.25 9.8 5.45 10 5.75 10Z" fill="black"/>
