--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="favicon.ico"><!-- 32×32 -->
   </head>
 
   <body>
@@ -153,7 +154,7 @@
         </section>
 
         <div class="product_list">
-          <section class="product_card"> <img class="product_card_image" src="Images/Hotel/hotel_1.jpg" alt="Amara">
+          <section class="product_card"> <img class="product_card_image" src="Images/Hotel/hotel_1.jpg" alt="Amara" width="300px" height="212px">
             <a class="product_link" href="product.html">
               <h3 class="product_cards_title">Amara Resort & Spa</h3>
             </a>
@@ -169,7 +170,7 @@
             <p class="card_rating">Рейтинг: 8,5</p>
           </section>
 
-          <section class="product_card"> <img class="product_card_image" src="Images/Hotel/hotel_2.jpg" alt="Villas">
+          <section class="product_card"> <img class="product_card_image" src="Images/Hotel/hotel_2.jpg" alt="Villas" width="300px" height="212px">
             <a class="product_link" href="product.html">
               <h3 class="product_cards_title">Villas at Poco Diablo</h3>
             </a>
@@ -185,7 +186,7 @@
             <p class="card_rating">Рейтинг: 9,2</p>
           </section>
 
-          <section class="product_card"> <img class="product_card_image" src="Images/Hotel/hotel_3.jpg" alt="Desert">
+          <section class="product_card"> <img class="product_card_image" src="Images/Hotel/hotel_3.jpg" alt="Desert" width="300px" height="212px">
             <a class="product_link" href="product.html">
               <h3 class="product_cards_title">Desert Quail Inn</h3>
             </a>
@@ -201,7 +202,7 @@
             <p class="card_rating_three">Рейтинг: 6,9</p>
           </section>
 
-          <section class="product_card"> <img class="product_card_image" src="Images/Hotel/hotel_4.jpg" alt="Desert">
+          <section class="product_card"> <img class="product_card_image" src="Images/Hotel/hotel_4.jpg" alt="Desert" width="300px" height="212px">
             <a class="product_link" href="product.html">
               <h3 class="product_cards_title">GreenTree Inn</h3>
             </a>
