--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="favicon.ico"><!-- 32×32 -->
+    <link rel="icon" href="images/favicon.ico"><!-- 32×32 -->
   </head>
 
   <body>
